envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      per_connection_buffer_limit_bytes: 10240
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                internal_address_config:
                  cidr_ranges:
                      address_prefix: 10.0.0.0
                      prefix_len: 8
                  cidr_ranges:
                      address_prefix: 192.168.0.0
                      prefix_len: 16
                  cidr_ranges:
                      address_prefix: 172.16.0.0
                      prefix_len: 12
                  cidr_ranges:
                      address_prefix: 127.0.0.1
                      prefix_len: 32
                request_headers_timeout: 10s
                request_timeout: 300s
                max_request_headers_kb: 2048
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          start_time: "%START_TIME%"
                          status: "%RESPONSE_CODE%"
                          server_protocol: "%PROTOCOL%"
                          request_method: "%REQ(:METHOD)%"
                          request_uri: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_flags: "%RESPONSE_FLAGS%"
                          request_length: "%BYTES_RECEIVED%"
                          bytes_sent: "%BYTES_SENT%"
                          request_time: "%DURATION%"
                          upstream_response_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                          http_x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                          http_user_agent: "%REQ(USER-AGENT)%"
                          request_id: "%REQ(X-REQUEST-ID)%"
                          request_authority: "%REQ(:AUTHORITY)%"
                          upstream: "%UPSTREAM_HOST%"
                http_filters:
                  - name: envoy.filters.http.buffer
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                      max_request_bytes: 5242880
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match:
                            path: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "This is a custom response text from Envoy!\n"
                        - match:
                            prefix: '/whoami'
                          route:
                            prefix_rewrite: "/"
                            cluster: service_whoami
                        - match:
                            prefix: '/httpbin'
                          route:
                            prefix_rewrite: "/"
                            cluster: service_httpbin
                            host_rewrite_literal: httpbin.org

  clusters:
    - name: service_whoami
      connect_timeout: 3s
      type: STRICT_DNS
      lb_policy: round_robin
      health_checks:
      - timeout: 5s
        interval: 10s
        unhealthy_threshold: 2
        initial_jitter: 1s
        healthy_threshold: 5
        always_log_health_check_failures: true
        http_health_check:
          path: /
          expected_statuses:
            start: 200
            end: 399
      close_connections_on_host_health_failure: true
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: whoami
                      port_value: 80

    - name: service_httpbin
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

application_log_config:
  log_format:
    json_format:
      Timestamp: "%Y-%m-%dT%T.%F"
      ThreadId: "%t"
      SourceLine: "%s:%#"
      Level: "%l"
      Message: "%j"

overload_manager:
  resource_monitors:
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 1000
